# ha-octopus-energy

./: .gitignore  README.md  pyproject.toml
custom_components/octopus_energy/: __init__.py  comparison_coordinator.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  icons.json  manifest.json  sensor.py  solar_coordinator.py  strings.json
custom_components/octopus_energy/frontend/: octopus-tariff-comparison-card.js
custom_components/octopus_energy/translations/: en.json
tests/components/octopus_energy/: conftest.py  test_cache.py  test_carbon.py  test_comparison_coordinator.py  test_config_flow.py  test_coordinator.py  test_sensor.py  test_solar_coordinator.py
