[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project]
name = "ha-octopus-energy-tests"
version = "0.0.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiooctopusenergy>=0.1.0",
    "voluptuous>=0.14",
]
